<resources>
    <string name="app_name">FindBue</string>

    <!-- Textos para la vista de Login -->

    <string name="lbl_Login">Inicio de Sesión</string>
    <string name="plh_correo">Ingresa tu correo electrónico</string>
    <string name="plh_password">Ingresa tu contraseña</string>
    <string name="lbl_logGoogle">Inicia sesión con Google</string>
    <string name="btn_registrar">Registrarse</string>
    <string name="btn_Ingresar">Ingresar</string>
    <string name="lbl_password">Contraseña</string>
    <string name="lbl_OrLogin">O inicia sesión con</string>
    <string name="lbl_Celular">Teléfono celular</string>

    <!--Textos para la vista de Panel Principal-->
    <string name="lbl_SaludoUsuario">¡Hola!, Usuario_Sistema</string>
    <string name="lbl_Familiar">Familiar</string>
    <string name="lbl_Encargado">Encargado</string>
    <string name="lbl_AdultoMayor">Adulto Mayor</string>
    <string name="lbl_AdultosMayores">Adultos Mayores</string>
    <string name="lbl_Encargados">Encargados</string>
    <string name="btn_ConsultarUbicacion">Consultar ubicación</string>
    <string name="btn_ConsultarRuta">Consultar ruta</string>

    <!-- Textos para la vista de Registrar Adulto Mayor-->
    <string name="lbl_NombresCompletos">Nombres completos</string>
    <string name="lbl_CorreoElectronico">Correo electrónico</string>
    <string name="lbl_DireccionDomicilio">Dirección de domicilio</string>
    <string name="lbl_NumTlfContacto">Número de teléfono de contácto</string>
    <string name="lbl_FechaDeNacimiento">Fecha de Nacimiento</string>
    <string name="lbl_FechaDeNacimientoFormato">Fecha de Nacimiento dd/mm/yyyy</string>
    <string name="lbl_Sexo">Sexo</string>
    <string name="lbl_Enfermedades">Enfermedades</string>
    <string name="lbl_Medicamentos">Medicamentos</string>
    <string name="lbl_PersonaEncargada">Persona Encargada</string>
    <string name="lbl_DescripcionFisica">Descripción física</string>
    <string name="btn_Continuar">Continuar</string>
    <string name="btn_Cancelar">Cancelar</string>
    <string name="lbl_UbicacionDomicilio">Ubicación del domicilio</string>
    <string name="lbl_Latitud">Latitud</string>
    <string name="lbl_Longitud">Longitud</string>
    <string name="lbl_CantidadDeMetrosPermitidos">Cantidad de metros permitidos</string>
    <string name="btn_Registrar">Registrar</string>

    <!-- Registrar información de familiar-->
    <string name="lbl_TlfMovil">Teléfono movil</string>


    <!-- Agregar un encargado-->
    <string name="lbl_CorreoEncargado">Correo electrónico del encargado</string>
    <string name="lbl_CorreoAdultoMayor">Correo electrónico del Adulto Mayor</string>
    <string name="btn_Agregar">Agregar</string>

    <string-array name="sexo">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_edit_busqueda">EditBusqueda</string>
    <string name="title_activity_permissions">PermissionsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>