<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/bg_background_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="225dp"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/lbl_Login"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/gray_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtEmailBox"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="275dp"
            android:hint="@string/plh_correo"
            app:boxStrokeColor="@color/teal_200"
            app:endIconMode="clear_text"
            app:hintTextColor="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/custom_icon_email_focused">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ingresarCorreo"
                android:layout_width="331dp"
                android:layout_height="55dp"
                android:textColor="@color/gray_text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPasswordBox"
            style="@style/FirebaseUI.TextInputLayout.PasswordField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="24dp"
            android:hint="@string/plh_password"
            app:boxStrokeColor="@color/teal_200"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/teal_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.526"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEmailBox"
            app:startIconDrawable="@drawable/custom_lock_icon_focused">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ingresarPwd"
                android:layout_width="331dp"
                android:layout_height="55dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imgDivider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="115dp"
            android:contentDescription="TODO"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.603"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPasswordBox"
            app:srcCompat="@drawable/ic_divider" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="105dp"
            android:text="@string/lbl_OrLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.525"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPasswordBox" />

        <ImageButton
            android:id="@+id/buttonGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:backgroundTint="#00FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgDivider"
            app:srcCompat="@drawable/ic_icon_google" />

        <android.widget.Button
            android:id="@+id/buttonIngresar"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custom_button_cta"
            android:text="@string/btn_Ingresar"
            android:textColor="#f5f5f5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPasswordBox" />

        <android.widget.Button
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/buttonRegistrar"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="32dp"
            android:text="@string/btn_registrar"
            android:background="@drawable/custom_button_outline"
            android:textColor="@color/gray_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPasswordBox" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="198dp"
            android:layout_height="166dp"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            app:srcCompat="@drawable/ic_applogo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>